--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,5 +3,5 @@ import HeroImage from "../components/HeroImage.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="About us | Hammer Head Cozumel">
+<Layout title="About us | Hammer Head Cozumel">y
 </Layout>
