Hopefully last atempt

--- a/src/components/MainCtaBtn.astro
+++ b/src/components/MainCtaBtn.astro
@@ -13,11 +13,12 @@
     gap: 15px;
   }
   a {
-    padding: 1rem 2.5rem;
-    border-radius: 15px;
-    font-weight: bolder;
     font-size: larger;
     width: max-content;
+    font-weight: bolder;
+    border-radius: 15px;
+    padding: 1rem 2.5rem;
+    text-decoration: none;
   }
   .book-now {
     background-color: #d90b16;
