--- a/src/components/MiniLinks.astro
+++ b/src/components/MiniLinks.astro
@@ -84,11 +84,13 @@ const { title1, text1, link1, title2, text2, link2, title3, text3, link3, imageu
     text-shadow: #0b0b0b 2px 2px 20px;
   }
   .link-item a {
-    text-shadow: #0b0b0b 2px 2px 20px;
+    color: white;
+    font-weight: bold;
     text-decoration: underline;
+    text-underline-offset: 4px;
     text-decoration-color: #ead91a;
     text-decoration-thickness: 5px;
-    text-underline-offset: 4px;
+    text-shadow: #0b0b0b 2px 2px 20px;
   }
   .link-item a:hover {
     color: #ead91a;
