--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -28,7 +28,7 @@ import PrimaryCta from "./PrimaryCta.astro";
     <li><a href="#">Blog</a></li>
   </ul>
   <div class="cta">
-    <PrimaryCta href="/booking" title="Book Now" type="primary-cta" />
+    <PrimaryCta href="/booking" title="Book Now" />
   </div>
   <div class="toggle" id="tgt">
     <svg
