--- a/src/components/SpecialtyPriceCard.astro
+++ b/src/components/SpecialtyPriceCard.astro
@@ -118,12 +118,13 @@ const { packageName, title, details, detailsBold } = Astro.props;
     padding: 2rem;
   }
   .cta a {
+    color: white;
+    font-size: larger;
     font-weight: bold;
     width: fit-content;
-    font-size: larger;
-    padding: 1rem 3rem;
+    padding: 1rem 2.5rem;
     border-radius: 15px;
-    color: white;
+    text-decoration: none;
     background-color: #0b0b0b;
   }
   .cta a:hover {
