--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -6,7 +6,7 @@ import PrimaryCta from "./PrimaryCta.astro";
   <div class="logo">
     <img
       class="img"
-      src="/public/mainLogo.jpeg"
+      src="/mainLogo.jpeg"
       alt="Logo"
       decoding="async"
       loading="lazy"
