New attempt FINALLLLLL

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,5 +1,5 @@
 ---
-import PrimaryCta from "./PrimaryCta.astro";
+import PrimaryCta from "../components/PrimaryCta.astro";
 ---
 
 <nav class="main-wrapper">
