New changes to most components and pages

--- a/src/components/LocationMap.astro
+++ b/src/components/LocationMap.astro
@@ -4,7 +4,7 @@
     id="embedded-map-display"
     style="height:100%; width:100%;max-width:100%;"
     ><iframe
-      style="height:100%;width:100%;border:0;"
+      style="height:100%;width:100%;border:none;"
       frameborder="0"
       src="https://www.google.com/maps/embed/v1/place?q=hammerhead+cozumel+dive+and+snorkel&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"
     ></iframe></div
