New changes bringing back photos

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import mainLogo from "../../public/mainLogo.jpeg";
+import mainLogo from "/mainLogo.jpeg";
 ---
 
 <footer>
