--- a/src/components/FormsToDownload.astro
+++ b/src/components/FormsToDownload.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import blogWrapper1 from "../../public/blogWrapper1.jpg";
+import blogWrapper1 from "/blogWrapper1.jpg";
 ---
 
 <formsToDownload>
