--- a/src/components/LionFishHunting.astro
+++ b/src/components/LionFishHunting.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from "astro:assets";
-import lionFish from "../..//public/lionFish.jpg";
+import lionFish from "/lionFish.jpg";
 import MainCtaBtn from "../components/MainCtaBtn.astro";
 interface props {
   title: string;
