--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import LocationMap from "../components/LocationMap.astro";
   <HeroVideo
     title="Dive into Adventure with Hammer Head in Cozumel, Mexico!"
     subtitle="Explore vibrant reefs, ancient wrecks, and marine marvels with our expert guides, we are here to make your experience unforgettable."
-    image="/public/homeHeroVideo.mp4"
+    image="/homeHeroVideo.mp4"
   />
   <BlogCta />
   <MiniLinks
@@ -27,7 +27,7 @@ import LocationMap from "../components/LocationMap.astro";
     link1="/divespecials"
     link2="/packages"
     link3="/blog"
-    imageurl="../../public/LifeSaver.jpg"
+    imageurl="/LifeSaver.jpg"
   />
   <MostRequested
     title="Colombia reef our most requested dive site"
