--- a/src/pages/packages.astro
+++ b/src/pages/packages.astro
@@ -13,7 +13,7 @@ import ReadyToBook from "../components/ReadyToBook.astro";
   <HeroImage
     title="Choose your package and let’s dive!"
     subtitle="Explore vibrant reefs, ancient wrecks, and marine marvels with our expert guides, we are here to make your experience unforgettable."
-    image="/public/packageHero.jpg"
+    image="/packageHero.jpg"
     alt="diver looking at camera while diving in deep blue ocean"
   />
   <div class="package-per-day">
