--- a/src/pages/snorkel.astro
+++ b/src/pages/snorkel.astro
@@ -11,7 +11,7 @@ import Layout from "../layouts/Layout.astro";
   <HeroImage
     title="Snorkel Tours"
     subtitle="Explore vibrant reefs, ancient wrecks, and marine marvels with our expert guides, we are here to make your experience unforgettable."
-    image="/public/snorkel2.webp"
+    image="/snorkel2.webp"
     alt="Girl snorkelink in a reef in Cozumel Mexico"
   />
   <div class="info-container">
@@ -63,7 +63,7 @@ import Layout from "../layouts/Layout.astro";
     link1="/blog"
     link2="/blog"
     link3="/blog"
-    imageurl="../../public/image123.jpg"
+    imageurl="/image123.jpg"
   />
   <FormsToDownload />
 </Layout>
