--- a/src/pages/specialty.astro
+++ b/src/pages/specialty.astro
@@ -24,7 +24,7 @@ import FormsToDownload from "../components/FormsToDownload.astro";
     <div class="image">
       <img
         class="image-item"
-        src="../../public/packageBg1.jpg"
+        src="/packageBg1.jpg"
         alt="foto de 3 busos en un arrefice con uchos peces"
       />
     </div>
@@ -68,7 +68,7 @@ import FormsToDownload from "../components/FormsToDownload.astro";
     link1="/blog"
     link2="/blog"
     link3="/blog"
-    imageurl="../../public/image123.jpg"
+    imageurl="/image123.jpg"
   />
   <FormsToDownload />
 </Layout>
