--- a/src/components/HeroImage.astro
+++ b/src/components/HeroImage.astro
@@ -1,5 +1,5 @@
 ---
-import HeroCtaBtn from "./HeroCtaBtn.astro";
+import HeroCtaBtn from "../components/HeroCtaBtn.astro";
 interface Props {
   title: string;
   subtitle: string;
