--- a/src/components/MiniGallery.astro
+++ b/src/components/MiniGallery.astro
@@ -1,10 +1,10 @@
 ---
 import { Image } from "astro:assets";
-import image1 from "../../public/miniGallery/image1.jpeg";
-import image2 from "../../public/miniGallery/image2.jpg";
-import image3 from "../../public/miniGallery/image3.webp";
-import image4 from "../../public/miniGallery/image4.jpeg";
-import image5 from "../../public/miniGallery/image5.jpeg";
+import image1 from "/miniGallery/image1.jpeg";
+import image2 from "/miniGallery/image2.jpg";
+import image3 from "/miniGallery/image3.webp";
+import image4 from "/miniGallery/image4.jpeg";
+import image5 from "/miniGallery/image5.jpeg";
 ---
 
 <miniGallery>
