--- a/src/components/BlogCta.astro
+++ b/src/components/BlogCta.astro
@@ -1,8 +1,3 @@
----
-import { Image } from "astro:assets";
-import blogWrapper1 from "/blogWrapper1.jpg";
----
-
 <blogCta>
   <div class="content-wrapper-row">
     <div class="video-wrapper">
@@ -10,9 +5,9 @@ import blogWrapper1 from "/blogWrapper1.jpg";
     </div>
     <div class="blog-cta-wrapper">
       <div class="image">
-        <Image
+        <img
           class="image-item"
-          src={blogWrapper1}
+          src="/blogWrapper1.jpg"
           alt="foto de 3 busos en un arrefice con uchos peces"
         />
       </div>
