--- a/src/components/PriceCard.astro
+++ b/src/components/PriceCard.astro
@@ -1,11 +1,11 @@
 ---
 import { Image } from "astro:assets";
-import captain from "/captain.png";
-import tank from "/tank.png";
-import sandwich from "/sandwich.png";
-import weight from "/weight.png";
-import water from "/water.png";
-import fruit from "/fruit.png";
+import captain from "./captain.png";
+import tank from "./tank.png";
+import sandwich from "./sandwich.png";
+import weight from "./weight.png";
+import water from "./water.png";
+import fruit from "./fruit.png";
 
 const captainAlt = "GUIDED BOAT DIVE";
 const sandwichAlt = "SANDWICHES";
