--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,15 +1,10 @@
----
-import { Image } from "astro:assets";
-import mainLogo from "/mainLogo.jpeg";
----
-
 <footer>
   <div class="footer-wrapper">
     <div class="menu">
       <div class="logo">
-        <Image
+        <img
           class="img"
-          src={mainLogo}
+          src="/mainLogo.jpeg"
           alt="Logo"
           decoding="async"
           loading="lazy"
