NEW URL IMAGES PRICE CARD

--- a/src/components/FormsToDownload.astro
+++ b/src/components/FormsToDownload.astro
@@ -1,14 +1,9 @@
----
-import { Image } from "astro:assets";
-import blogWrapper1 from "./blogWrapper1.jpg";
----
-
 <formsToDownload>
   <div class="forms-wrapper">
     <div class="image">
-      <Image
+      <img
         class="image-item"
-        src={blogWrapper1}
+        src="/blogWrapper1.jpg"
         alt="foto de 3 busos en un arrefice con uchos peces"
       />
     </div>
