NEW URL FOR VIDEO

--- a/src/components/BlogCta.astro
+++ b/src/components/BlogCta.astro
@@ -1,7 +1,7 @@
 <blogCta>
   <div class="content-wrapper-row">
     <div class="video-wrapper">
-      <video src="/public/video-1.mp4" loop controls playsinline></video>
+      <video src="/video-1.mp4" loop controls playsinline></video>
     </div>
     <div class="blog-cta-wrapper">
       <div class="image">
