NEW NAV AND OTHER COMPONENTS

--- a/src/components/FormsToDownload.astro
+++ b/src/components/FormsToDownload.astro
@@ -18,20 +18,26 @@
       <div class="links">
         <div class="download-item">
           <span>Guest Registration</span>
-          <a href="#" download="Guest Registration Form" class="download-btn"
-            >Download</a
+          <a
+            href="/Guest-Registration-Espanol.pdf"
+            download="Guest Registration Form"
+            class="download-btn">Download</a
           >
         </div>
         <div class="download-item">
           <span>Liability Release</span>
-          <a href="#" download="Liability Release Form" class="download-btn"
-            >Download</a
+          <a
+            href="Liability-Form.pdf"
+            download="Liability Release Form"
+            class="download-btn">Download</a
           >
         </div>
         <div class="download-item">
           <span>Medical Form</span>
-          <a href="#" download="Medical Forms Form" class="download-btn"
-            >Download</a
+          <a
+            href="Medical-Form.pdf"
+            download="Medical Forms Form"
+            class="download-btn">Download</a
           >
         </div>
       </div>
