--- a/src/pages/packages.astro
+++ b/src/pages/packages.astro
@@ -59,7 +59,7 @@ import ReadyToBook from "../components/ReadyToBook.astro";
       padding: 3rem 2rem;
       background-size: cover;
       background-blend-mode: multiply;
-      background: url(../../public/packageBg1.jpg);
+      background: url(/packageBg1.jpg);
     }
     .wrapper {
       text-align: center;
